v1.14/istio-ingress-kibana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-kibana
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-kibana
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5601
        host: kibana-kibana.elk.svc.cluster.local
